<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label_word"
    android:textAppearance="?android:attr/textAppearanceMedium"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/editDialogWordEdit"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label_translate"
    android:textAppearance="?android:attr/textAppearanceMedium"/>

  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:lines="3"
    android:id="@+id/editDialogTranslateEdit"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/editDialogOkButton"
      android:text="@string/confirm_label"
      android:layout_weight="1"
      android:layout_gravity="bottom"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/editDialogDeleteButton"
      android:text="@string/delete_label"
      android:layout_weight="1"
      android:layout_gravity="bottom"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/editDialogCancelButton"
      android:text="@string/cancel_label"
      android:layout_weight="1"
      android:layout_gravity="bottom"/>

  </LinearLayout>
</LinearLayout>